--- a/package.json
+++ b/package.json
@@ -31,9 +31,9 @@
   },
   "homepage": "https://github.com/mercadopago/px-hybrid#readme",
   "dependencies": {
-    "xcode": "undefined0.8.3"
+    "xcode": "1.0.0"
   },
   "devDependencies": {
-    "xcode": "undefined0.8.3"
+    "xcode": "1.0.0"
   }
 }
